test/tests/stages/14_pointers/valid/comparisons/compare_to_null.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_null_pointer
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[8]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Double: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: null
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: get_null_pointer
                      List[0]: 
                      None: 
                    None: 
                  Pointer: 
                    Double: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: non_null
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Double: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: non_null
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CUnary: 
                  CNot: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: null
                      None: 
                    CConstant: 
                      CConstLong: 
                        TLong: 0
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CUnary: 
                  CNot: 
                  CBinary: 
                    CNotEqual: 
                    CVar: 
                      TIdentifier: non_null
                      None: 
                    CConstant: 
                      CConstUInt: 
                        TUInt: 0
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: null
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
